--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "url-polyfill": "^1.0.0",
     "vue": "^2.1.10",
     "vue-charts": "^0.2.1",
-    "vuex": "^2.2.1"
+    "vuex": "^2.2.1",
+    "d3": "^4.4.0",
+    "tween.js": "^16.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -64,9 +66,11 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "node-sass": "^3.13.1",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "testdouble": "^1.11.1",
