--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-chartjs": "^3.3.1",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.6.1",
+    "vue-tour": "^1.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
